# 3DReconstruction

./: 1.2.130seg4.20000-40000肺实质.dcm  MCtest.cpp  README.md
src/: CMakeLists.txt  GeodesicActiveContourLevelSet.cxx  SegCombineReconstruct.cxx  SkinSeg.cxx  four-neighbour.h
